--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -387,10 +387,10 @@
   }
 
 #afya-app-content {
-    background-color: whitesmoke;
+    background-color: #adb5bd;
     padding-top: 75px;
     font-family: sans-serif;
-    min-height: 95vh;
+    min-height: 100vh;
     /* width: 100%; */
 }
 
