--- a/src/app/main/register-patient-form/register-patient-form.component.html
+++ b/src/app/main/register-patient-form/register-patient-form.component.html
@@ -7,7 +7,7 @@
                 <p class="card-category">Fill all the areas marked as <u>REQUIRED</u>.</p>
             </div>
             <div class="card-body">
-                <div class="container">
+                <!-- <div class="container"> -->
                     <form [formGroup]='newPatientRecordForm' id="patient-registration">
 
                         <div class="row">
@@ -18,7 +18,7 @@
 
                                 <div class="form-group has-success bmd-form-group">
                                     <label for="patientRegistrationNumber" class="bmd-label-floating label">
-                                        <span>Registration Number</span>
+                                        <span>Patient ID</span>
                                         <span class="input-required">(required)</span>
                                     </label>
                                     <input type="text" id="patientRegistrationNumber" class="data-input"
@@ -145,7 +145,7 @@
                         </div>
     
                     </form>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
 
