final ngoitsi updates

--- a/src/app/main/main-container/main-container.component.css
+++ b/src/app/main/main-container/main-container.component.css
@@ -23,6 +23,10 @@ ul.no-bullets li{
     color: #e9ecef;
 }
 
+ul.no-bullets li.active{
+    color: red;
+    background-color: #eef5fd;
+}
 
 .sidebar-nav {
     margin-right: 5px;
