--- a/src/app/main/patient-details/patient-details.component.html
+++ b/src/app/main/patient-details/patient-details.component.html
@@ -11,7 +11,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div id="session-status-bar">
-                                    <span>Active Visit - 14.Mar.2021, 20:36:38</span>
+                                    <span>{{session?.status}} Visit - {{session?.date | date: 'dd/MM/yyyy'}}</span>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -228,6 +228,28 @@
                                                         </tr>
                                                     </tbody>
                                                 </table>
+                                            </div>
+                
+                                        </div>
+
+                                        <div class="section">
+                                            <div class="sec-header">
+                                                <span class="sec-title">History</span>
+                                            </div>
+                
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <div class="table-responsive" *ngIf="patientHistory.length > 0; else noneTemplate">
+                                                        <table class="table">
+                                                            <tbody>
+                                                                <tr *ngFor="let session of patientHistory; let i = index" (click)="navToSessionSummary(session)" class="session-entry">
+                                                                    <td>{{session.date | date: 'dd/MM/yyyy'}}</td>
+                                                                    <td>{{session.status}}</td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
                                             </div>
                 
                                         </div>
