--- a/src/app/main/edit-patient-details/edit-patient-details.component.html
+++ b/src/app/main/edit-patient-details/edit-patient-details.component.html
@@ -120,7 +120,7 @@
 
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="form-group has-success bmd-form-group">
-                                        <input type="text" name="last-name" class="form-control"
+                                        <input type="text" name="lastName" class="form-control"
                                             [(ngModel)]="patient.lastName" #LastName="ngModel" required>
                                         <div *ngIf="LastName.invalid && editPatientDetailsFormSubmitted === true">
                                             <div *ngIf="LastName.errors.required">
@@ -178,7 +178,7 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
                                     <div class="form-group has-success bmd-form-group">
-                                        <input type="text" name="phone-number" class="form-control"
+                                        <input type="text" name="phoneNumber" class="form-control"
                                             [(ngModel)]="patient.phoneNumber" #PhoneNumber="ngModel" required>
                                         <div *ngIf="PhoneNumber.invalid && editPatientDetailsFormSubmitted === true">
                                             <div *ngIf="PhoneNumber.errors.required">
